fix: collapsibles being invisible in amoled theme

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -21,7 +21,7 @@ html.amoled {
   --table-row-background-secondary-dark: #050505;
   --theme-dark-sidebar: #000000;
   --theme-dark-sidebar-hover: #1a1a1a;
-  --theme-dark-collapsible: #050505;
+  --theme-dark-collapsible: #111111;
 }
 
 abbr[title].no-underline {
